[gd_scene load_steps=4 format=3 uid="uid://bicxxsvdda42l"]

[ext_resource type="FontFile" uid="uid://y5n0qsqeagv5" path="res://fonts/HomeVideo-BLG6G.ttf" id="1_lgt2b"]
[ext_resource type="Script" path="res://gui/gui.gd" id="1_u3s1v"]

[sub_resource type="Theme" id="Theme_cysb7"]
default_font = ExtResource("1_lgt2b")
default_font_size = 12

[node name="GUI" type="CanvasLayer"]
script = ExtResource("1_u3s1v")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_cysb7")

[node name="ScoreLabel" type="Label" parent="Control"]
texture_filter = 1
layout_mode = 1
offset_right = 61.0
offset_bottom = 23.0
size_flags_horizontal = 0
text = "Score: 0"

[node name="GameOverLabel" type="Label" parent="Control"]
visible = false
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -48.5
offset_top = -11.5
offset_right = 48.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 16
text = "GAME OVER!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SpeedLabel" type="Label" parent="Control"]
texture_filter = 1
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -79.0
offset_bottom = 23.0
grow_horizontal = 0
text = "Speed: 0.0"
